# tracer

./: LICENSE  Makefile  README.md  finstrument.c  finstrument.h  meson.build
example/c/: Makefile  fork.c  hello.c  lex.yy.c  parser.l  parser.y  pthread.c  tracer_event.c
js/callGraph/: README.md  package-lock.json  package.json  package.json~  webpack.config.js  webpack.config.js~
js/callGraph/src/: index.js  index.js~
js/util/: README.md  resolveFunc.js
js/viewer/: readline.js  readline.js~
src/: Makefile  README.md  base_va.c  base_va.h  bt.c  bt.h  finstrument.c  finstrument.h  logger.c  logger.h  meson.build  ringbuffer.c  ringbuffer.h  sample.c  watchalloc.c
test/: Makefile  csv.conf  double_free.c  factorial.c  malloc_leak.c  meson.build  mtrace_tracer.conf  smalloc_leak.c  strdup_leak.c  test_finstrument.cpp  test_ringbuffer.cpp  thread.c  tracer_event.c
